# python-project-50

./: Makefile  README.md  pyproject.toml
hexlet_code/scripts/: gendiff.py
